--- a/MyApplication/MyApplication/UI/ActionSaleWindow.xaml
+++ b/MyApplication/MyApplication/UI/ActionSaleWindow.xaml
@@ -6,6 +6,15 @@
         xmlns:local="clr-namespace:MyApplication.UI"
         mc:Ignorable="d"
         Title="ActionSaleWindow" Height="300" Width="300">
+
+    <Window.Resources>
+        <ControlTemplate x:Key="TextBoxErrorTemplate">
+            <Border BorderBrush="Red" BorderThickness="2">
+                <AdornedElementPlaceholder/>
+            </Border>
+        </ControlTemplate>
+    </Window.Resources>
+
     <Grid>
         <Label Content="Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="79"/>
         <Label Content="Discount" HorizontalAlignment="Left" Margin="10,51,0,0" VerticalAlignment="Top" Width="79"/>
@@ -13,8 +22,24 @@
         <Label Content="End Date" HorizontalAlignment="Left" Margin="10,149,0,0" VerticalAlignment="Top" Width="79"/>
         <DatePicker Name="dpStartDate" SelectedDate="{Binding Path=StartDate}" HorizontalAlignment="Left" Height="26" Margin="103,97,0,0" VerticalAlignment="Top" Width="160"/>
         <DatePicker Name="dpEndDate" SelectedDate="{Binding Path=EndDate}" HorizontalAlignment="Left" Height="26" Margin="103,149,0,0" VerticalAlignment="Top" Width="160"/>
-        <TextBox Name="tbName" Text="{Binding Path=Name}" HorizontalAlignment="Left" Height="26" Margin="103,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="160"/>
-        <TextBox Name="tbDiscount" Text="{Binding Path=Discount}" HorizontalAlignment="Left" Height="26" Margin="103,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="160"/>
+        <TextBox Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxErrorTemplate}" Name="tbName"  HorizontalAlignment="Left" Height="26" Margin="103,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="160" TextChanged="tbName_TextChanged"    >
+            <TextBox.Text>
+                <Binding Path="Name" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <local:StringValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+        <TextBox Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxErrorTemplate}" Name="tbDiscount" HorizontalAlignment="Left" Height="26" Margin="103,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="160" TextChanged="tbDiscount_TextChanged">
+            <TextBox.Text>
+                <Binding Path="Discount" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <local:DiscountValidationRule/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <Button Name="btnAddEditActionSale" Content="Add" HorizontalAlignment="Left" Height="28" Margin="103,210,0,0" VerticalAlignment="Top" Width="74" Click="btnAddEditActionSale_Click"/>
         <Button Content="Cancel" HorizontalAlignment="Left" Height="28" Margin="189,210,0,0" VerticalAlignment="Top" Width="74" IsCancel="True"/>
 
