--- a/MyApplication/MyApplication/MainWindow.xaml
+++ b/MyApplication/MyApplication/MainWindow.xaml
@@ -6,6 +6,97 @@
         xmlns:local="clr-namespace:MyApplication"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
+    <Window.Resources>
+
+        <Style TargetType="TabControl">
+            <Setter Property="Background" Value="White"/>
+        </Style>
+        <Style TargetType="DataGrid">
+            <Setter Property="Background" Value="White"/>
+        </Style>
+
+        <Style x:Key="Add" TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="#00C851"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter x:Name="PART_Content"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          TextElement.Foreground="{TemplateBinding Foreground}"></ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#007E33"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="Update" TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="#ffbb33"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter x:Name="PART_Content"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          TextElement.Foreground="{TemplateBinding Foreground}"></ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#FF8800"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="Delete" TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="#ff4444"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter x:Name="PART_Content"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          TextElement.Foreground="{TemplateBinding Foreground}"></ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#CC0000"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+    </Window.Resources>
     <TabControl HorizontalAlignment="Left" Height="569" VerticalAlignment="Top" Width="790"  SelectedIndex="0">
         <TabItem Header="Users" Height="24" Margin="-2,-2,-2.2,0" VerticalAlignment="Top" RenderTransformOrigin="0.502,0.5">
             <Grid Margin="0,0,-6.2,-1.2">
@@ -13,10 +104,12 @@
                     <RowDefinition Height="434*"/>
                     <RowDefinition Height="103*"/>
                 </Grid.RowDefinitions>
-                <DataGrid x:Name="dgUsers" IsReadOnly="True" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgUsers_AutoGeneratingColumn"/>
-                <Button x:Name="btnAddUser" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btnAddUser_Click"/>
-                <Button x:Name="btnEditUser" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btnEditUser_Click"/>
-                <Button x:Name="btnDeleteUser" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btnDeleteUser_Click"/>
+                <DataGrid x:Name="dgUsers" IsReadOnly="True" Margin="0,40,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="394" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgUsers_AutoGeneratingColumn"/>
+                <Button x:Name="btnAddUser" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btnAddUser_Click" Style="{StaticResource ResourceKey=Add}"/>
+                <Button x:Name="btnEditUser" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btnEditUser_Click" Style="{StaticResource ResourceKey=Update}"/>
+                <Button x:Name="btnDeleteUser" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btnDeleteUser_Click" Style="{StaticResource ResourceKey=Delete}"/>
+                <TextBox Name="tbSearchUsers" HorizontalAlignment="Left" Height="25" Margin="661,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" TextChanged="tbSearchUsers_TextChanged"/>
+                <Label Content="Search" HorizontalAlignment="Left" Height="25" Margin="596,10,0,0" VerticalAlignment="Top" Width="60"/>
             </Grid>
         </TabItem>
         <TabItem Header="Furniture types" Margin="-1.8,-2,-2,2" RenderTransformOrigin="0.5,0.5">
@@ -25,11 +118,13 @@
                     <RowDefinition Height="434*"/>
                     <RowDefinition Height="103*"/>
                 </Grid.RowDefinitions>
-                <DataGrid AutoGenerateColumns="True" IsReadOnly="True" x:Name="dgFurnitureTypes" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgFurnitureTypes_AutoGeneratingColumn">
+                <DataGrid AutoGenerateColumns="True" IsReadOnly="True" x:Name="dgFurnitureTypes" Margin="0,49,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="385" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgFurnitureTypes_AutoGeneratingColumn">
                 </DataGrid>
-                <Button Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="AddFurnitureType"/>
-                <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="EditFurnitureType"/>
-                <Button Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="DeleteFurnitureType"/>
+                <Button Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="AddFurnitureType" Style="{StaticResource ResourceKey=Add}"/>
+                <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="EditFurnitureType" Style="{StaticResource ResourceKey=Update}"/>
+                <Button Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="DeleteFurnitureType" Style="{StaticResource ResourceKey=Delete}"/>
+                <TextBox Name="tbSearchFT" HorizontalAlignment="Left" Height="25" Margin="661,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" TextChanged="tbSearchFT_TextChanged"/>
+                <Label Content="Search" HorizontalAlignment="Left" Height="25" Margin="596,10,0,0" VerticalAlignment="Top" Width="60"/>
             </Grid>
         </TabItem>
         <TabItem Header="Furniture" Height="24" Margin="-2,-2,-2.2,0" VerticalAlignment="Top" RenderTransformOrigin="0.502,0.5">
@@ -38,10 +133,12 @@
                     <RowDefinition Height="434*"/>
                     <RowDefinition Height="103*"/>
                 </Grid.RowDefinitions>
-                <DataGrid IsReadOnly="True" x:Name="dgFurniture" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgFurniture_AutoGeneratingColumn"/>
-                <Button Name="btnAddFurniture" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btnAddFurniture_Click"/>
-                <Button Name="btnEditFurniture" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btnEditFurniture_Click"/>
-                <Button Name="btnDeleteFurniture" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btnDeleteFurniture_Click"/>
+                <DataGrid IsReadOnly="True" x:Name="dgFurniture" Margin="0,49,0,99.6" HorizontalAlignment="Center" VerticalAlignment="Center" Height="389" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgFurniture_AutoGeneratingColumn" Grid.RowSpan="2"/>
+                <Button Name="btnAddFurniture" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btnAddFurniture_Click" Style="{StaticResource ResourceKey=Add}"/>
+                <Button Name="btnEditFurniture" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btnEditFurniture_Click" Style="{StaticResource ResourceKey=Update}"/>
+                <Button Name="btnDeleteFurniture" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btnDeleteFurniture_Click" Style="{StaticResource ResourceKey=Delete}"/>
+                <TextBox Name="tbSearchFurniture" HorizontalAlignment="Left" Height="25" Margin="661,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" TextChanged="tbSearchFurniture_TextChanged"/>
+                <Label Content="Search" HorizontalAlignment="Left" Height="25" Margin="596,10,0,0" VerticalAlignment="Top" Width="60"/>
             </Grid>
         </TabItem>
         <TabItem Header="Additional services" Height="24" Margin="-2,-2,-2.2,0" VerticalAlignment="Top" RenderTransformOrigin="0.502,0.5">
@@ -50,10 +147,12 @@
                     <RowDefinition Height="434*"/>
                     <RowDefinition Height="103*"/>
                 </Grid.RowDefinitions>
-                <DataGrid IsReadOnly="True" x:Name="dgAdditionalService" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgAdditionalService_AutoGeneratingColumn"/>
-                <Button Name="btAddAdditionalService" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btAddAdditionalService_Click"/>
-                <Button Name="btEditAdditionalService" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btEditAdditionalService_Click"/>
-                <Button Name="btDeleteAdditionalService" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btDeleteAdditionalService_Click"/>
+                <DataGrid IsReadOnly="True" x:Name="dgAdditionalService" Margin="0,50,0,97.6" HorizontalAlignment="Center" VerticalAlignment="Center" Height="390" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgAdditionalService_AutoGeneratingColumn" Grid.RowSpan="2"/>
+                <Button Name="btAddAdditionalService" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btAddAdditionalService_Click" Style="{StaticResource ResourceKey=Add}"/>
+                <Button Name="btEditAdditionalService" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btEditAdditionalService_Click" Style="{StaticResource ResourceKey=Update}"/>
+                <Button Name="btDeleteAdditionalService" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btDeleteAdditionalService_Click" Style="{StaticResource ResourceKey=Delete}"/>
+                <TextBox Name="tbSearchAS" HorizontalAlignment="Left" Height="25" Margin="661,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" TextChanged="tbSearchAS_TextChanged"/>
+                <Label Content="Search" HorizontalAlignment="Left" Height="25" Margin="596,10,0,0" VerticalAlignment="Top" Width="60"/>
             </Grid>
         </TabItem>
         <TabItem Header="Action sales" Height="24" Margin="-2,-2,-2.2,0" VerticalAlignment="Top" RenderTransformOrigin="0.502,0.5">
@@ -62,10 +161,12 @@
                     <RowDefinition Height="434*"/>
                     <RowDefinition Height="103*"/>
                 </Grid.RowDefinitions>
-                <DataGrid IsReadOnly="True" x:Name="dgActionSales" Margin="0,0,0,0.4" HorizontalAlignment="Center" VerticalAlignment="Center" Height="434" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgActionSales_AutoGeneratingColumn"/>
-                <Button Name="btnAddActionSale" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btnAddActionSale_Click"/>
-                <Button Name="btnEditActionSale" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btnEditActionSale_Click"/>
-                <Button Name="btnDeleteActionSale" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btnDeleteActionSale_Click"/>
+                <DataGrid IsReadOnly="True" x:Name="dgActionSales" Margin="0,50,0,97.6" HorizontalAlignment="Center" VerticalAlignment="Center" Height="390" Width="791" SelectedIndex="0" AutoGeneratingColumn="dgActionSales_AutoGeneratingColumn" Grid.RowSpan="2"/>
+                <Button Name="btnAddActionSale" Content="Add" HorizontalAlignment="Left" Margin="29,26.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130" Height="45" Click="btnAddActionSale_Click" Style="{StaticResource ResourceKey=Add}"/>
+                <Button Name="btnEditActionSale" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="205,26.6,0,0" Grid.Row="1" Height="45" Click="btnEditActionSale_Click" Style="{StaticResource ResourceKey=Update}"/>
+                <Button Name="btnDeleteActionSale" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" Margin="380,26.6,0,0" Grid.Row="1" Height="45" Click="btnDeleteActionSale_Click" Style="{StaticResource ResourceKey=Delete}"/>
+                <TextBox Name="tbSearchActions" HorizontalAlignment="Left" Height="25" Margin="661,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" TextChanged="tbSearchActions_TextChanged"/>
+                <Label Content="Search" HorizontalAlignment="Left" Height="25" Margin="596,10,0,0" VerticalAlignment="Top" Width="60"/>
             </Grid>
         </TabItem>
     </TabControl>
