--- a/MyApplication/MyApplication/UI/AllAdditionalServicesWindow.xaml
+++ b/MyApplication/MyApplication/UI/AllAdditionalServicesWindow.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyApplication.UI"
         mc:Ignorable="d"
-        Title="AllAdditionalServicesWindow" Height="300" Width="300" SizeToContent="WidthAndHeight" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="AllAdditionalServicesWindow" Height="292.343" Width="400" SizeToContent="WidthAndHeight" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <DataGrid IsReadOnly="True" Name="dgAllAdditionalServices" HorizontalAlignment="Left" Height="205" Margin="0,0,-0.4,0" VerticalAlignment="Top" Width="294" AutoGeneratingColumn="dgAllAdditionalServices_AutoGeneratingColumn"/>
-        <Button Content="Add" HorizontalAlignment="Left" Height="26" Margin="94,224,0,0" VerticalAlignment="Top" Width="101" Click="Button_Click"/>
+        <DataGrid IsReadOnly="True" Name="dgAllAdditionalServices" HorizontalAlignment="Left" Height="205" Margin="0,0,-0.4,0" VerticalAlignment="Top" Width="393" AutoGeneratingColumn="dgAllAdditionalServices_AutoGeneratingColumn" SelectedIndex="0"/>
+        <Button Content="Add" HorizontalAlignment="Left" Height="26" Margin="138,227,0,0" VerticalAlignment="Top" Width="101" Click="Button_Click"/>
+        <TextBox Name="tbPieces" HorizontalAlignment="Left" Height="20" Margin="10,210,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="28" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TextChanged="tbPieces_TextChanged"/>
 
     </Grid>
 </Window>
