--- a/MyApplication/MyApplication/UI/FurnitureTypeWindow.xaml
+++ b/MyApplication/MyApplication/UI/FurnitureTypeWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MyApplication.UI"
         mc:Ignorable="d"
         Title="FurnitureTypeWindow" Height="300" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
-    
+
     <Window.Resources>
         <ControlTemplate x:Key="TextBoxErrorTemplate">
             <Border BorderBrush="Red" BorderThickness="2">
@@ -26,8 +26,8 @@
             <RowDefinition Height="0*"/>
             <RowDefinition Height="17*"/>
         </Grid.RowDefinitions>
-        <Label x:Name="lblName" Grid.Column="0" Content="Name" HorizontalAlignment="Center" Margin="15,20.6,25.2,16.6" FontWeight="Bold" Width="67" VerticalAlignment="Center" Height="26" Grid.Row="1" ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
-        <TextBox Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxErrorTemplate}" Padding="0" BorderThickness="1" VerticalContentAlignment="Center" Width="266" x:Name="tbName" Margin="89,11.6,38.6,16.6" Height="35" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalScrollBarVisibility="Disabled" SelectionOpacity="0" Grid.ColumnSpan="2" TextChanged="tbName_TextChanged">
+        <Label x:Name="lblName" Grid.Column="0" Content="Name" HorizontalAlignment="Center" Margin="15,20.6,25.2,16.6" Width="67" VerticalAlignment="Center" Height="26" Grid.Row="1" ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
+        <TextBox Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxErrorTemplate}" Padding="0" BorderThickness="1" VerticalContentAlignment="Center" Width="295" x:Name="tbName" Margin="89,11.4,9.6,16.8" Height="35" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalScrollBarVisibility="Disabled" SelectionOpacity="0" Grid.ColumnSpan="2" TextChanged="tbName_TextChanged">
             <TextBox.Text>
                 <Binding Path="Name" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
@@ -36,7 +36,7 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <Button x:Name="btnAddEditFurnitureType" Content="Button" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="9.8,34.4,0,0" Grid.Row="3" VerticalAlignment="Top" Width="95" Click="btnAddEditFurnitureType_Click"/>
-        <Button x:Name="btnCancel" Content="Cancel" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="142.8,34.4,0,0" Grid.Row="3" VerticalAlignment="Top" Width="95" IsCancel="True"/>
+        <Button x:Name="btnAddEditFurnitureType" Content="Add" HorizontalAlignment="Left" Height="35" Margin="9.8,19.2,0,0" Grid.Row="3" VerticalAlignment="Top" Width="95" Click="btnAddEditFurnitureType_Click" Grid.Column="1"/>
+        <Button x:Name="btnCancel" Content="Cancel" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="152.8,19.2,15,15" Grid.Row="3" VerticalAlignment="Top" Width="95" IsCancel="True"/>
     </Grid>
 </Window>
