--- a/MyApplication/MyApplication/UI/SalesmanWindow.xaml
+++ b/MyApplication/MyApplication/UI/SalesmanWindow.xaml
@@ -6,6 +6,68 @@
         xmlns:local="clr-namespace:MyApplication.UI"
         mc:Ignorable="d"
         Title="SalesmanWindow" Height="676.605" Width="760.784" SizeToContent="WidthAndHeight" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+
+    <Window.Resources>
+        
+        <Style TargetType="DataGrid">
+            <Setter Property="Background" Value="White"/>
+        </Style>
+
+        <Style x:Key="Add" TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="#00C851"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter x:Name="PART_Content"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          TextElement.Foreground="{TemplateBinding Foreground}"></ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#007E33"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="Update" TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="#ffbb33"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="White"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter x:Name="PART_Content"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          TextElement.Foreground="{TemplateBinding Foreground}"></ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#FF8800"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+    </Window.Resources>
     <Grid>
         <DataGrid IsReadOnly="True" Name="dgFurnitureForSale" HorizontalAlignment="Left" Height="195" Margin="10,10,0,0" VerticalAlignment="Top" Width="550" AutoGeneratingColumn="dgFurnitureForSale_AutoGeneratingColumn"/>
         <DataGrid IsReadOnly="True" Name="dgServicesForSale" HorizontalAlignment="Left" Height="195" Margin="10,231,0,0" VerticalAlignment="Top" Width="550" AutoGeneratingColumn="dgServicesForSale_AutoGeneratingColumn"/>
@@ -17,8 +79,8 @@
         <DatePicker Name="dpDateOfSale" HorizontalAlignment="Left" Height="30" Margin="165,456,0,0" VerticalAlignment="Top" Width="187"/>
         <Label Content="Buyer" HorizontalAlignment="Left" Height="30" Margin="10,513,0,0" VerticalAlignment="Top" Width="119"/>
         <TextBox Name="tbBuyer" HorizontalAlignment="Left" Height="30" Margin="165,513,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="187"/>
-        <Button Name="btnSaveSale" Content="Save" HorizontalAlignment="Left" Height="35" Margin="10,579,0,0" VerticalAlignment="Top" Width="156"/>
-        <Button Content="History" HorizontalAlignment="Left" Height="35" Margin="584,579,0,0" VerticalAlignment="Top" Width="149" Click="Button_Click"/>
+        <Button Style="{StaticResource ResourceKey=Add}" Name="btnSaveSale" Content="Save" HorizontalAlignment="Left" Height="35" Margin="10,579,15,15" VerticalAlignment="Top" Width="156" Click="btnSaveSale_Click"/>
+        <Button Style="{StaticResource ResourceKey=Update}" Content="History" HorizontalAlignment="Left" Height="35" Margin="584,579,15,15" VerticalAlignment="Top" Width="137" Click="Button_Click"/>
 
     </Grid>
 </Window>
